Fixing nav alignment

--- a/css/site.css
+++ b/css/site.css
@@ -327,7 +327,7 @@ blockquote p {
   .has-docked-nav .navbar {
     position: fixed;
     top: 0;
-    left: 2; }
+    left: 2px; }
   .has-docked-nav .navbar-spacer {
     display: block; }
   /* Re-overiding the width 100% declaration to match size of % based container */
